--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,14 +1,12 @@
-
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
-  background-color: #f0f2f5;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
 }
-
 
 .form {
   display: flex;
@@ -149,4 +147,3 @@ body {
     transform: rotate(360deg);
   }
 }
-
